# fake_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/core/_shared/: config.py  exceptions.py
src/core/_shared/infraestructure/: auth_interface.py  crypt.py  database.py  fastapi_auth_adapter.py  orm.py  repository_interface.py  struct_log.py
src/core/admin_reports/application/use_cases/: create_admin_reports.py  dto.py  get_admin_reports.py
src/core/admin_reports/domain/entity/: admin_report.py
src/core/admin_reports/infraestructure/repository/sqlmodel/: admin_report_adapter.py
src/core/auth/application/use_cases/: create_acces_token.py  dto.py  is_admin.py  is_user.py
src/core/auth/domain/entity/: user.py
src/core/auth/infraestructure/: auth_interface.py  exceptions.py  fastapi_auth_adapter.py  jwt_auth_adapter.py
src/core/auth/infraestructure/repository/sqlmodel/: user_adapter.py
src/core/user/application/use_cases/: create_admin_reports.py  create_user.py  create_user_purchases.py  dto.py  get_admin_reports.py  get_user.py  get_user_purchases.py
src/core/user/domain/entity/: user.py
src/core/user/infraestructure/: repository_interface.py  repository_sqlmodel_adapter.py
src/core/user_purchases/application/use_cases/: create_user_purchases.py  dto.py  get_user_purchases.py
src/core/user_purchases/domain/entity/: user_purchase.py
src/core/user_purchases/infraestructure/repository/sqlmodel/: user_purchase_adapter.py
src/entrypoints/web/: api_exceptions.py  main.py
src/entrypoints/web/middlewares/: __init__.py  access_logger.py  timer.py
src/entrypoints/web/v1/: __init__.py  dependencies.py
src/entrypoints/web/v1/admin_report/: controllers.py  schemas.py
src/entrypoints/web/v1/admin_reports/: controllers.py  schemas.py
src/entrypoints/web/v1/auth/: controllers.py  schemas.py
src/entrypoints/web/v1/health_check/: controllers.py  schemas.py
src/entrypoints/web/v1/user/: controllers.py  schemas.py
src/entrypoints/web/v1/user_purchase/: controllers.py  schemas.py
(+3 files in other folders)
