[tool.poetry]
name = "fake-service"
version = "0.1.0"
description = ""
authors = ["Jefferson Fragoso de Souza <jefferson.fragoso.ext@jeitto.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
fastapi = "^0.115.7"
pydantic-settings = "^2.7.1"
uvicorn = "^0.34.0"
uvloop = "^0.21.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
sqlmodel = "^0.0.22"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
